<resources>
    <string name="app_name">BSA News</string>
    <string name="title_activity_login">main page</string>
    <string name="main_menu">Main Menu</string>
    <string name="register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in to BSA News</string>
    <string name="action_register">Register for BSA News</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_Hint">UserName</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="load_button">Load Saved</string>
    <string name="head_button">Top Stories</string>
    <string name="Categories_button">Categories</string>
    <string name="load_local_button">Local Saved</string>
    <string name="SHARED_PREFS">edu.uw.tcss450.PREFS</string>
    <string name="UserName">colorstring</string>
    <string name="title_activity_news_view">BSA News</string>
    <string name="remember_me">Remember Me</string>
    <string-array name="category_options">
        <item>Business</item>
        <item>Entertainment</item>
        <item>Entertainment_MovieAndTV</item>
        <item>Entertainment_Music</item>
        <item>Health</item>
        <item>Politics</item>
        <item>ScienceAndTechnology</item>
        <item>Technology</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Sports_Golf</item>
        <item>Sports_MLB</item>
        <item>Sports_NBA</item>
        <item>Sports_NFL</item>
        <item>Sports_NHL</item>
        <item>Sports_Soccer</item>
        <item>Sports_Tennis</item>
        <item>Sports_CFB</item>
        <item>Sports_CBB</item>
        <item>US</item>
        <item>US_Northeast</item>
        <item>US_South</item>
        <item>US_Midwest</item>
        <item>US_West</item>
        <item>World</item>
        <item>World_Africa</item>
        <item>World_Americas</item>
        <item>World_Asia</item>
        <item>World_Europe</item>
        <item>World_MiddleEast</item>
    </string-array>

    <string-array name="DB_COLUMN_NAMES">
        <item>name</item>
        <item>url</item>
        <item>description</item>
    </string-array>

    <string name="CREATE_NEWS_SQL">
        CREATE TABLE Bookmarks
        (url text,
         name text,
         description text)
    </string>
    <string name="DROP_NEWS_SQL">
        DROP TABLE IF EXIST Bookmarks
    </string>
    <string name="DB_NAME">News.db</string>
    <string name="TABLE_NAME">Bookmarks</string>
    <string name="load_saved">Load Saved</string>
    <string name="save">Save</string>
    <string name="local_save">Save locally</string>

</resources>
